# tiger_openapi_rust_sdk_unofficial

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
config/: gateway.example.toml
docs/: architecture.md  provider-development.md  security.md
examples/: downloader.rs  gateway_client.rs  test_kline.rs
src/: client_config.rs  constants.rs  contract_utils.rs  crypto_utils.rs  lib.rs  main.rs  models.rs  properties.rs  quote_client.rs  service_types.rs  tiger_client.rs  tiger_enums.rs  tiger_utils.rs  trade_client.rs
src/gateway/: api.rs  cache.rs  config.rs  error.rs  mod.rs  models.rs  provider.rs  realtime.rs  state.rs  tiger_provider.rs
