[package]
name = "tiger_openapi_rust_sdk_unofficial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.42"
lazy_static = "1.5.0"
libc = "0.2.180"
openssl = "0.10.73"
pkcs8 = "0.10.2"
rand = "0.9.2"
regex = "1.12.3"
reqwest = { version = "0.12.24", features = ["json"] }
rsa = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.18"
uuid = { version = "1.18.1", features = ["v4"] }

[lib]
name = "tiger_openapi_rust_sdk_unofficial"
path = "src/lib.rs"
